--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,17 +1,17 @@
 trigger:
 - main
+
 stages:
   - stage: terraforminstaller
     displayName: terraforminstaller
     jobs:
       - job: terraforminstaller
         displayName: terraforminstaller
-        pool: windows
+        pool: ABC Agent
         steps:
         - task: TerraformInstaller@1
           inputs:
-            terraformVersion: 'latest'
-        - 
+            terraformVersion: 'latest' 
         - task: TerraformTask@5
           inputs:
             provider: 'azurerm'
