Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ stages:
         steps:
         - task: TerraformInstaller@1
           inputs:
-            terraformVersion: 'latest' 
+            terraformVersion: '1.13.1' 
         - task: TerraformTask@5
           inputs:
             provider: 'azurerm'
